Fixes overflow issue and reduced motion impl

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -1,5 +1,4 @@
 .main {
-  position: relative;
   max-width: 50rem;
   margin: 0 auto;
   min-height: 100vh;
